--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
     "@nestjs/platform-express": "^11.0.10",
     "@nestjs/testing": "^11.0.10",
     "@types/express": "4.16.1",
-    "@types/jest": "24.0.11",
+    "@types/jest": "^29.5.14",
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
-    "jest": "24.7.1",
+    "jest": "^29.7.0",
     "prettier": "1.17.0",
     "rxjs": "^7.8.2",
     "supertest": "4.0.2",
-    "ts-jest": "24.0.2",
+    "ts-jest": "^29.2.6",
     "ts-node": "8.1.0",
     "tsc-watch": "2.2.1",
     "tsconfig-paths": "3.8.0",
